# SystemCompanion

./: .cursorrules  .gitignore  CHANGELOG.md  README.md  RELEASE_NOTES.md  System_Companion-0.1.0-x86_64.AppImage  meson.build  pyproject.toml  requirements.txt
docs/: README.md  cpu_mini_graphs_improvements.md  development_guide.md  disk_iops_chart_improvements.md  multi_interface_network_chart_improvements.md
packaging/appimage/: =0.11.0  README.md  build.sh
packaging/appimage/AppDir/: AppRun  system-companion.desktop
packaging/flatpak/: README.md  build.sh  org.systemcompanion.app.desktop  org.systemcompanion.app.metainfo.xml  org.systemcompanion.app.yml
resources/: meson.build  system-companion.desktop  system-companion.metainfo.xml
resources/css/: style.css
screenshots/: README.md
scripts/: check_dependencies.py  convert_icon.sh  create_icon_structure.sh  setup_dev_environment.sh  take_screenshots.sh  test_appimage.sh  test_icon.sh
src/: meson.build
src/system_companion/: __init__.py  main.py
src/system_companion/core/: __init__.py  maintenance_manager.py  performance_analyzer.py  system_monitor.py
src/system_companion/data/: __init__.py  database.py
src/system_companion/ui/: __init__.py  main_window.py
src/system_companion/ui/widgets/: __init__.py  chart_widget.py  dashboard_widget.py  disconnected_interface_widget.py  health_widget.py  maintenance_widget.py  multi_core_chart_widget.py  multi_interface_chart_widget.py  network_interface_chart_widget.py  performance_widget.py  security_widget.py  settings_widget.py
src/system_companion/utils/: __init__.py  config.py  config_manager.py  exceptions.py  logger.py
tests/: meson.build
tests/unit/: __init__.py  test_config.py
