# System Companion resources build configuration

# Install desktop file
install_data(
  'system-companion.desktop',
  install_dir: 'share/applications'
)

# Install metainfo
install_data(
  'system-companion.metainfo.xml',
  install_dir: 'share/metainfo'
)

# Install icons
install_data(
  'icons/scalable/apps/system-companion.svg',
  install_dir: 'share/icons/hicolor/scalable/apps'
)

# Install CSS files
install_data(
  'css/style.css',
  install_dir: 'share/system-companion/css'
) 